namespace GoldMetrics.GoldCheck.Platform.ReportingNotifications.Domain.Model.Commands;

public record ExportReportCommand(int Id);