namespace GoldMetrics.GoldCheck.Platform.ReportingNotifications.Domain.Model.Commands;

public record GenerateReportCommand(int Id);