namespace GoldMetrics.GoldCheck.Platform.ReportingNotifications.Domain.Model.Commands;

public record RequestReportExportationCommand(int Id, string Format);