namespace GoldMetrics.GoldCheck.Platform.ReportingNotifications.Domain.Model.Queries;

public record GetNotificationByIdQuery(int Id);