namespace GoldMetrics.GoldCheck.Platform.ReportingNotifications.Domain.Model.Queries;

public record GetNotificationsByUserQuery(string UserId);