namespace GoldMetrics.GoldCheck.Platform.ReportingNotifications.Domain.Model.Queries;

public record GetReportByIdQuery(int Id);